GNOME Bugzilla – Bug 755384
tiled monitors don't turn off correctly.
Last modified: 2015-09-22 10:07:34 UTC
Created attachment 311827 [details] [review] patch to turn off all monitors in a tile set. When testing with a tiled monitor I noticed the monitor doesn't turn off the second panel when configured via gnome-control-center.