gnome-rr: Fix turning off tiled monitors

If you switch a tiled monitors off via the control panel,
we need to propogate the change to the other tiles, when
we get a geometry change.

This fixes a problem with a tiled monitor only switching
half off and confusing the desktop.

https://bugzilla.gnome.org/show_bug.cgi?id=755384